# solar-works-sales-rabbit

./: .gcloudignore  .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflow/: main.yaml
pipeline/: pipeline.py  pipeline_controller.py  pipeline_repo.py  pipeline_service.py
sales_rabbit/: sales_rabbit_repo.py
test/: test_unit.py
